remove google ad

--- a/res/xml-v14/proxydroid_preference.xml
+++ b/res/xml-v14/proxydroid_preference.xml
@@ -27,7 +27,7 @@
         android:title="@string/host">
     </EditTextPreference>
     <EditTextPreference
-        android:defaultValue="3128"
+        android:defaultValue="8888"
         android:key="port"
         android:summary="@string/port_summary"
         android:title="@string/port">
@@ -136,7 +136,7 @@
         android:title="@string/notif_ringtone_title"/>
 
     <CheckBoxPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="settings_key_notif_vibrate"
         android:summary="@string/notif_vibrate_summary"
         android:title="@string/notif_vibrate_title"/>
